# anom_recon

./: .gitignore  LICENSE  README.md  create_environment.sh  download_pre-trained_model.py  install_python_ubuntu.sh  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  lr_monitor.yaml
configs/data/: anomrecon.yaml
configs/experiment/: europe_t2m_ERA5_0wr.yaml  europe_t2m_ERA5_1wr.yaml  europe_t2m_ERA5_2wr.yaml  (+13 more)
data/: download_data.py
notebooks/: SEAS5_bias.ipynb  graphical_abstract.ipynb  model_skill_perturbed_index.ipynb  seas5_Iwr_corr.ipynb
scripts/: ERA5_regridder.py  SEAS5_bias_correction.py  SEAS5_monthly_anomalies.py  SEAS5_weather_regime_indices.py  best_worst_reconstruction.py  command_list.txt  compute_7WR.py  compute_IwrSEAS5_models.py  compute_and_plot_mare_mae_acc_ce.py  compute_anomalies.sh  compute_mare_mae_acc_ce.py  compute_nWR.py  compute_z500_indices.sh  daily_anomalies.py  daily_to_monthly.py  daily_weather_regimes_indices.py  functions.py  matplotlibrc  medians_comparison.py  monthly_NAO_index.py  monthly_weather_regimes_indices.py  plot_1WR.py  plot_2WR.py  plot_4WR.py  plot_7WR.py  plot_IwrSEAS5_skills.py  plot_IwrSEAS5_skills_2axis.py  plot_SEAS5_Iwr_correlation.py  plot_SEAS5_Iwr_skills.py  plot_composite_vs_model.py  plot_mare_acc_ce.py  plot_numWR_skills.py  plot_numWR_skills_2axis.py  plot_numWR_skills_compact.py  plot_numWR_skills_test_1WR.py  plot_numWR_vs_SEAS5.py  plot_results.sh  plot_season_temp_prec_acc_ce.py  plot_temp_prec_skills.py  plot_temp_prec_skills_err.py  (+7 more)
src/: train.py
(+11 files in other folders)
