[tool.poetry]
name = "anom_recon"
version = "0.1.0"
description = "fields reconstruction from atmospheric circulation"
authors = ["Alessandro Camillett <acamilletti@fbk.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
torch = "^2.4.0"
lightning = "^2.3.3"
xarray = "^2024.6.0"
cfgrib = "^0.9.14.0"
ipykernel = "^6.29.5"
netcdf4 = "^1.7.1.post1"
matplotlib = "^3.9.1"
einops = "^0.8.0"
torchinfo = "^1.8.0"
hydra-core = "^1.3.2"
rootutils = "^1.0.7"
rich = "^13.7.1"
hydra-colorlog = "^1.2.0"
tensorboard = "^2.17.0"
xeofs = "^3.0.2"
xclim = "^0.57.0"
xsdba = "^0.5.0"
cartopy = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
